--- a/class/homework/chap2.ipynb
+++ b/class/homework/chap2.ipynb
@@ -225,6 +225,99 @@
     "print('w:',w,'b:',b)\n",
     "print(f'방정식 : x2 = {-w[0]/w[1]} * x1 + {-b/w[1]}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4 review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Perceptron2():\n",
+    "    \"\"\"퍼셉트론 학습 알고리즘\"\"\"\n",
+    "\n",
+    "    def __init__(self,input_size, threshold=100,title=''):\n",
+    "        self.threshold = threshold\n",
+    "        self.weights = np.zeros(input_size)\n",
+    "        self.title = title\n",
+    "        self.count = 0\n",
+    "\n",
+    "    def predict(self, inputs):\n",
+    "        summation = np.dot(inputs, self.weights)\n",
+    "        if summation > 0:\n",
+    "            activation = 1\n",
+    "        else:\n",
+    "            #activation = -1\n",
+    "            activation = 0\n",
+    "        return activation\n",
+    "    \n",
+    "    def train(self, training_inputs, labels):\n",
+    "        print(\"training...\")\n",
+    "        for _ in range(self.threshold):\n",
+    "            m = 0\n",
+    "            for input, label in zip(training_inputs, labels):\n",
+    "                summation = np.dot(input, self.weights)\n",
+    "                if summation * label <= 0:\n",
+    "                    print(\n",
+    "                        f\"weights:{self.weights}, input:{input}, label:{label}, sum:{summation}\")\n",
+    "                    self.weights += label * input\n",
+    "                    m += 1\n",
+    "                    self.count += 1\n",
+    "            if m ==0:\n",
+    "                break\n",
+    "\n",
+    "    def print_result(self, inputs):\n",
+    "        print(10*'-', self.title)\n",
+    "        print('trained weights:', self.weights)\n",
+    "        print(f'total counts:  {self.count}' )\n",
+    "        for x in inputs:\n",
+    "            print('{}, {}'.format(x, self.predict(x)))\n",
+    "        print(10*'-', self.title)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # AND 게이트\n",
+    "    training_inputs = np.array([[1,0,0],[1,1,0],[1,0,1],[1,1,1]]) \n",
+    "    labels = np.array([-1, -1, -1, 1]) # [0,0,0,1] 로 했을 시 이 코드에서는 30번째 줄에서 0을 곱했을 경우 값이 이상하게 나올 수 있다.\n",
+    "\n",
+    "    perceptron = Perceptron2(3, title='AND 게이트', threshold=10)\n",
+    "    perceptron.train(training_inputs, labels)\n",
+    "    perceptron.print_result(training_inputs)\n",
+    "\n",
+    "    \n",
+    "    # OR 게이트\n",
+    "    training_inputs = np.array([[1,0,0],[1,1,0],[1,0,1],[1,1,1]]) \n",
+    "    labels = np.array([-1, 1, 1, 1]) # [0,1,1,1] 로 했을 시 이 코드에서는 30번째 줄에서 0을 곱했을 경우 값이 이상하게 나올 수 있다.\n",
+    "\n",
+    "    perceptron = Perceptron2(3, title='OR 게이트', threshold=10)\n",
+    "    perceptron.train(training_inputs, labels)\n",
+    "    perceptron.print_result(training_inputs)\n",
+    "\n",
+    "    # NAND 게이트\n",
+    "    training_inputs = np.array([[1,0,0],[1,1,0],[1,0,1],[1,1,1]]) \n",
+    "    labels = np.array([1, 1, 1, -1]) # [1,0,0,0] 로 했을 시 이 코드에서는 30번째 줄에서 0을 곱했을 경우 값이 이상하게 나올 수 있다.\n",
+    "\n",
+    "    perceptron = Perceptron2(3, title='NAND 게이트', threshold=10)\n",
+    "    perceptron.train(training_inputs, labels)\n",
+    "    perceptron.print_result(training_inputs)\n",
+    "\n",
+    "    # 임의의 게이트\n",
+    "    training_inputs = np.array([[1,0,0],[1,1,0],[1,0,1],[1,1,1],[1,2,1],[1,8,9],[1,7,8],[1,6,5],[1,5,8],[1,1,8]]) \n",
+    "    labels = np.array([-1, -1, -1, -1, -1 ,1 ,1 , 1, 1, 1]) # [1,0,0,0] 로 했을 시 이 코드에서는 30번째 줄에서 0을 곱했을 경우 값이 이상하게 나올 수 있다.\n",
+    "\n",
+    "    perceptron = Perceptron2(3, title='임의의 게이트', threshold=10)\n",
+    "    perceptron.train(training_inputs, labels)\n",
+    "    perceptron.print_result(training_inputs)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
