--- a/class/homework/chap2.ipynb
+++ b/class/homework/chap2.ipynb
@@ -235,9 +235,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training...\n",
+      "weights:[0. 0. 0.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  0.  0.], input:[1 1 1], label:1, sum:-1.0\n",
+      "weights:[0. 1. 1.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  1.  1.], input:[1 1 0], label:-1, sum:0.0\n",
+      "weights:[-2.  0.  1.], input:[1 1 1], label:1, sum:-1.0\n",
+      "weights:[-1.  1.  2.], input:[1 1 0], label:-1, sum:0.0\n",
+      "weights:[-2.  0.  2.], input:[1 0 1], label:-1, sum:0.0\n",
+      "weights:[-3.  0.  1.], input:[1 1 1], label:1, sum:-2.0\n",
+      "weights:[-2.  1.  2.], input:[1 0 1], label:-1, sum:0.0\n",
+      "weights:[-3.  1.  1.], input:[1 1 1], label:1, sum:-1.0\n",
+      "weights:[-2.  2.  2.], input:[1 1 0], label:-1, sum:0.0\n",
+      "weights:[-3.  1.  2.], input:[1 1 1], label:1, sum:0.0\n",
+      "weights:[-2.  2.  3.], input:[1 1 0], label:-1, sum:0.0\n",
+      "weights:[-3.  1.  3.], input:[1 0 1], label:-1, sum:0.0\n",
+      "weights:[-4.  1.  2.], input:[1 1 1], label:1, sum:-1.0\n",
+      "weights:[-3.  2.  3.], input:[1 0 1], label:-1, sum:0.0\n",
+      "weights:[-4.  2.  2.], input:[1 1 1], label:1, sum:0.0\n",
+      "weights:[-3.  3.  3.], input:[1 1 0], label:-1, sum:0.0\n",
+      "---------- AND 게이트\n",
+      "trained weights: [-4.  2.  3.]\n",
+      "total counts:  18\n",
+      "[1 0 0], 0\n",
+      "[1 1 0], 0\n",
+      "[1 0 1], 0\n",
+      "[1 1 1], 1\n",
+      "---------- AND 게이트\n",
+      "training...\n",
+      "weights:[0. 0. 0.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  0.  0.], input:[1 1 0], label:1, sum:-1.0\n",
+      "weights:[0. 1. 0.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[1. 1. 1.], input:[1 0 0], label:-1, sum:1.0\n",
+      "weights:[0. 1. 1.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  1.  1.], input:[1 1 0], label:1, sum:0.0\n",
+      "weights:[0. 2. 1.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  2.  1.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[0. 2. 2.], input:[1 0 0], label:-1, sum:0.0\n",
+      "---------- OR 게이트\n",
+      "trained weights: [-1.  2.  2.]\n",
+      "total counts:  9\n",
+      "[1 0 0], 0\n",
+      "[1 1 0], 1\n",
+      "[1 0 1], 1\n",
+      "[1 1 1], 1\n",
+      "---------- OR 게이트\n",
+      "training...\n",
+      "weights:[0. 0. 0.], input:[1 0 0], label:1, sum:0.0\n",
+      "weights:[1. 0. 0.], input:[1 1 1], label:-1, sum:1.0\n",
+      "weights:[ 0. -1. -1.], input:[1 0 0], label:1, sum:0.0\n",
+      "weights:[ 1. -1. -1.], input:[1 1 0], label:1, sum:0.0\n",
+      "weights:[ 2.  0. -1.], input:[1 1 1], label:-1, sum:1.0\n",
+      "weights:[ 1. -1. -2.], input:[1 1 0], label:1, sum:0.0\n",
+      "weights:[ 2.  0. -2.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[ 3.  0. -1.], input:[1 1 1], label:-1, sum:2.0\n",
+      "weights:[ 2. -1. -2.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[ 3. -1. -1.], input:[1 1 1], label:-1, sum:1.0\n",
+      "weights:[ 2. -2. -2.], input:[1 1 0], label:1, sum:0.0\n",
+      "weights:[ 3. -1. -2.], input:[1 1 1], label:-1, sum:0.0\n",
+      "weights:[ 2. -2. -3.], input:[1 1 0], label:1, sum:0.0\n",
+      "weights:[ 3. -1. -3.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[ 4. -1. -2.], input:[1 1 1], label:-1, sum:1.0\n",
+      "weights:[ 3. -2. -3.], input:[1 0 1], label:1, sum:0.0\n",
+      "weights:[ 4. -2. -2.], input:[1 1 1], label:-1, sum:0.0\n",
+      "weights:[ 3. -3. -3.], input:[1 1 0], label:1, sum:0.0\n",
+      "---------- NAND 게이트\n",
+      "trained weights: [ 4. -2. -3.]\n",
+      "total counts:  18\n",
+      "[1 0 0], 1\n",
+      "[1 1 0], 1\n",
+      "[1 0 1], 1\n",
+      "[1 1 1], 0\n",
+      "---------- NAND 게이트\n",
+      "training...\n",
+      "weights:[0. 0. 0.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  0.  0.], input:[1 8 9], label:1, sum:-1.0\n",
+      "weights:[0. 8. 9.], input:[1 0 0], label:-1, sum:0.0\n",
+      "weights:[-1.  8.  9.], input:[1 1 0], label:-1, sum:7.0\n",
+      "weights:[-2.  7.  9.], input:[1 0 1], label:-1, sum:7.0\n",
+      "weights:[-3.  7.  8.], input:[1 1 1], label:-1, sum:12.0\n",
+      "weights:[-4.  6.  7.], input:[1 2 1], label:-1, sum:15.0\n",
+      "weights:[-5.  4.  6.], input:[1 0 1], label:-1, sum:1.0\n",
+      "weights:[-6.  4.  5.], input:[1 1 1], label:-1, sum:3.0\n",
+      "weights:[-7.  3.  4.], input:[1 2 1], label:-1, sum:3.0\n",
+      "---------- 임의의 게이트\n",
+      "trained weights: [-8.  1.  3.]\n",
+      "total counts:  10\n",
+      "[1 0 0], 0\n",
+      "[1 1 0], 0\n",
+      "[1 0 1], 0\n",
+      "[1 1 1], 0\n",
+      "[1 2 1], 0\n",
+      "[1 8 9], 1\n",
+      "[1 7 8], 1\n",
+      "[1 6 5], 1\n",
+      "[1 5 8], 1\n",
+      "[1 1 8], 1\n",
+      "---------- 임의의 게이트\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
