--- a/class/homework/chap3.ipynb
+++ b/class/homework/chap3.ipynb
@@ -67,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n",
       "[1]\n",
+      "[0]\n",
       "[1]\n",
       "[0]\n",
       "[0]\n"
@@ -93,10 +93,10 @@
     "\n",
     "def init_network():\n",
     "    network = {}\n",
-    "    network['W1'] = np.array([[7,5],[-1,1]])\n",
-    "    network['b1'] = np.array([2,1])\n",
-    "    network['W2'] = np.array([[1],[-2]])\n",
-    "    network['b2'] = np.array([1])\n",
+    "    network['W1'] = np.array([[1,1],[-1,-1]])\n",
+    "    network['b1'] = np.array([-1,1])\n",
+    "    network['W2'] = np.array([[-2],[2]])\n",
+    "    network['b2'] = np.array([-0.2])\n",
     "    return network\n",
     "\n",
     "def forward(network,x):\n",
@@ -305,36 +305,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n",
-      "[1]\n",
       "[1]\n",
       "[0]\n",
       "[0]\n",
-      "[0]\n"
+      "[0]\n",
+      "[1]\n",
+      "[1]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "p=0\n",
+    "p=1\n",
     "def step_function(x):\n",
     "    y = x>p\n",
     "    return y.astype(int)\n",
     "\n",
     "def init_network():\n",
     "    network = {}\n",
-    "    network['W1'] = np.array([[15,-1],[1,1]])\n",
-    "    network['b1'] = np.array([5,11])\n",
-    "    network['W2'] = np.array([[-1],[-1]])\n",
-    "    network['b2'] = np.array([2])\n",
+    "    network['W1'] = np.array([[1,-10],[-3,3]])\n",
+    "    network['b1'] = np.array([1,0.5])\n",
+    "    network['W2'] = np.array([[-5],[-3]])\n",
+    "    network['b2'] = np.array([3])\n",
     "    return network\n",
     "\n",
     "def forward(network,x):\n",
