--- a/class/homework/chap3.ipynb
+++ b/class/homework/chap3.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -313,9 +313,9 @@
      "output_type": "stream",
      "text": [
       "[1]\n",
-      "[0]\n",
-      "[0]\n",
-      "[0]\n",
+      "[1]\n",
+      "[1]\n",
+      "[1]\n",
       "[1]\n",
       "[1]\n"
      ]
@@ -324,17 +324,17 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "p=1\n",
+    "p=-2\n",
     "def step_function(x):\n",
     "    y = x>p\n",
     "    return y.astype(int)\n",
     "\n",
     "def init_network():\n",
     "    network = {}\n",
-    "    network['W1'] = np.array([[1,-10],[-3,3]])\n",
-    "    network['b1'] = np.array([1,0.5])\n",
-    "    network['W2'] = np.array([[-5],[-3]])\n",
-    "    network['b2'] = np.array([3])\n",
+    "    network['W1'] = np.array([[-1.5,1.5],[1.5,-1.5]])\n",
+    "    network['b1'] = np.array([1,1.5])\n",
+    "    network['W2'] = np.array([[1.5],[0.5]])\n",
+    "    network['b2'] = np.array([1.5])\n",
     "    return network\n",
     "\n",
     "def forward(network,x):\n",
