--- a/class/docx/chap5.ipynb
+++ b/class/docx/chap5.ipynb
@@ -105,6 +105,36 @@
     "\n",
     "      return dx"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SoftmaxWithLoss:\n",
+    "  def __init__(self):\n",
+    "    self.loss = None\n",
+    "    self.y = None # 소프트맥스 출력\n",
+    "    self.t = None # 타깃 레이블( 원 핫 레이블 )\n",
+    "\n",
+    "  def forward(self, x, t):\n",
+    "    self.t = t\n",
+    "    self.y = softmax(x)\n",
+    "    self.loss = cross_entropy_error(self.y, self.t)\n",
+    "    return self.loss\n",
+    "\n",
+    "  def backward(self, dout=1):\n",
+    "    batch_size = self.t.shape[0]\n",
+    "    if self.t.size == self.y.size: # 원-핫-인코딩\n",
+    "      dx = (self.y - self.t) / batch_size\n",
+    "    else:\n",
+    "      dx = self.y.copy()\n",
+    "      dx[np.arange(batch_size), self.t] -= 1\n",
+    "      dx = dx / batch_size\n",
+    "\n",
+    "    return dx\n"
+   ]
   }
  ],
  "metadata": {
